--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>maven-release-test</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -13,7 +13,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:VeepinRaut/maven_test_initial_release.git</developerConnection>
         <url>https://github.com/VeepinRaut/maven_test_initial_release</url>
-        <tag>maven-release-test-1.0</tag>
+        <tag>HEAD</tag>
     </scm>
     <build>
         <plugins>
